--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -6,18 +6,36 @@ on:
       - develop
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Development Code
+        uses: actions/checkout@v2
+      - name: Setup node
+        uses: actions/setup-node@master
+        with:
+          node-version: 18.x
+      - name: Install dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
+      - name: Test
+        run: npm test
+        
   deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Development Code
         uses: actions/checkout@v2
-      - name: Use Node.js 17.x
-        uses: actions/setup-node@v1
+      - name: setup node
+        uses: actions/setup-node@master
         with:
-          node-version: 17.x
-      - run: npm install
-      - run: npm run build --if-present
+          node-version: 18.x
+      - name: Install dependencies
+        run: npm install
+      - name: Build
+        run: npm run build --if-present
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
