--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -24,18 +24,9 @@ jobs:
         
   deploy:
     runs-on: ubuntu-latest
-
+    if: ${{ always() && contains(join(needs.*.result, ','), 'success') }}
+    needs: [build]
     steps:
-      - name: Development Code
-        uses: actions/checkout@v2
-      - name: setup node
-        uses: actions/setup-node@master
-        with:
-          node-version: 18.x
-      - name: Install dependencies
-        run: npm install
-      - name: Build
-        run: npm run build --if-present
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
