--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -18,14 +18,13 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build
-        run: npm run build
+        run: npm run build --if-present
       - name: Test
         run: npm test
         
   deploy:
     runs-on: ubuntu-latest
-    if: ${{ always() && contains(join(needs.*.result, ','), 'success') }}
-    needs: [build]
+    needs: build
     steps:
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
