--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -6,15 +6,33 @@ on:
       - main
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Development Code
+        uses: actions/checkout@v2
+      - name: Setup node
+        uses: actions/setup-node@master
+        with:
+          node-version: 18.x
+      - name: Install dependencies
+        run: npm install
+      - name: Build
+        run: npm run build --if-present
+      - name: Test
+        run: npm test
+        
   deploy:
+    runs-on: ubuntu-latest
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Use Node.js 17.x
-        uses: actions/setup-node@v1
+      - name: Setup node
+        uses: actions/setup-node@master
         with:
-          node-version: 17.x
+          node-version: 18.x
       - run: npm install
       - run: npm run build --if-present
       - name: Deploy to Heroku
