--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -26,6 +26,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Development Code
+        uses: actions/checkout@v2
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
